@@ -139,6 +139,10 @@ struct {
   { "enum ag_graph_vertex_style", sizeof (enum ag_graph_vertex_style) },
   { "AG_GraphVertex", sizeof (AG_GraphVertex) },
   { "struct ag_graph_vertex", sizeof (struct ag_graph_vertex) },
+  { "AG_HBox *", sizeof (AG_HBox *) },
+  { "struct ag_hbox *", sizeof (struct ag_hbox *) },
+  { "AG_HBox", sizeof (AG_HBox) },
+  { "struct ag_hbox", sizeof (struct ag_hbox) },
   { "AG_HSVPal *", sizeof (AG_HSVPal *) },
   { "struct ag_hsvpal *", sizeof (struct ag_hsvpal *) },
   { "AG_HSVPal", sizeof (AG_HSVPal) },
@@ -285,6 +289,10 @@ struct {
   { "struct ag_ucombo *", sizeof (struct ag_ucombo *) },
   { "AG_UCombo", sizeof (AG_UCombo) },
   { "struct ag_ucombo", sizeof (struct ag_ucombo) },
+  { "AG_VBox *", sizeof (AG_VBox *) },
+  { "struct ag_vbox *", sizeof (struct ag_vbox *) },
+  { "AG_VBox", sizeof (AG_VBox) },
+  { "struct ag_vbox", sizeof (struct ag_vbox) },
   { "AG_Widget *", sizeof (AG_Widget *) },
   { "struct ag_widget *", sizeof (struct ag_widget *) },
   { "AG_Widget", sizeof (AG_Widget) },
