@@ -1,1 +1,1 @@
-agar.gui.widget.hbox agar-gui-widget-hbox.ads
+agar.gui.widget.hbox agar-gui-widget-hbox.ads agar-gui-widget-hbox.adb
