@@ -1,1 +1,1 @@
-agar.gui.widget.vbox agar-gui-widget-vbox.ads
+agar.gui.widget.vbox agar-gui-widget-vbox.ads agar-gui-widget-vbox.adb
